[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patch-edit-env"
version = "0.1.0"
description = "Patch editing RL environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "httpx",
  "websockets",
  "pydantic",
  "openai",
]

[tool.setuptools]
py-modules = ["inference", "models", "client"]
