[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patch-edit-env"
version = "0.1.0"
description = "Patch editing RL environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "httpx",
  "websockets",
  "pydantic",
  "openai",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["inference", "models", "client"]

[tool.setuptools.packages.find]
include = ["server*"]
